# ABMS-contact_tracing-Repast

./: README
RepastHPC/include/: Agent.h  Model.h  Phone.h
RepastHPC/props/: model.props
RepastHPC/src/: Agent.cpp  Main.cpp  Model.cpp  Phone.cpp
work/: .RData  .Rhistory  GenerationAgentsDistribution.R  Makefile  Makefile.in  ModelRepast_slurm.sh  ModelRepast_slurm_gdb.sh  PreprocessAgentsDistribution  config.status  configure  configure.ac  env  make.configure  make.configure.in
work/autom4te.cache/: output.0  requests  traces.0
